--- a/index.html
+++ b/index.html
@@ -385,58 +385,58 @@
                     <!-- Step 1 -->
                     <article class="step-item">  
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-1.svg" alt="Imagem ilustrativa" height="30px"> 
+                            <img loading="lazy" src="assets/img/steps/step-1.svg" alt="Imagem ilustrativa" height="30px" width="30px"> 
                             First Contact
                         </h3>
-                        <img loading="lazy" src="assets/img/steps/first-contact.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/first-contact.svg" alt="Imagem ilustrativa" class="img-step" width="206px" height="200px">
                         <p class="text-center">
                             Contact can be made by email, skype, discord or by filling out the quote form on our website. In this first contact,
                             tell us a little about the problems or what you are looking for for your company.
                         </p>               
                     </article>
                     <div class="next-step">
-                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px" width="40px">
                     </div>
 
                     <!-- Step 2 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-2.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-2.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Understanding
                         </h3>
-                        <img loading="lazy" src="assets/img/steps/understanding.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/understanding.svg" alt="Imagem ilustrativa" class="img-step" width="300px" height="200px" >
                         <p class="text-center">
                             This stage is where we prepare a budget based on the information given, a meeting is recommended so that we can better
                             understand your company and which procedures best fit your needs and what can be improved.
                         </p>
                     </article>
                     <div class="next-step">
-                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px" width="40px">
                     </div>
 
                     <!-- Step 3 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-3.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-3.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Starting the Project
                         </h3>
-                        <img src="assets/img/steps/start-the-project.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img src="assets/img/steps/start-the-project.svg" alt="Imagem ilustrativa" class="img-step" width="276px" height="200px">
                         <p class="text-center">
                             After defining the budget and going through all the planning of what will be done, a deadline will be passed for the
                             creation of the software and tests.
                         </p>
                     </article>
                     <div class="next-step">
-                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px" width="40px">
                     </div>
 
                     <!-- Step 4 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-4.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-4.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Finalization
                         </h3>
-                        <img loading="lazy" src="assets/img/steps/finalization.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/finalization.svg" alt="Imagem ilustrativa" class="img-step" height="200px" width="333px">
                         <p class="text-center">
                             With the software or project in hand, we carry out the final tests and instruction/adaptation of users with the software
                             or the new routine.
@@ -444,16 +444,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px" width="40px">
                     </div>
 
                     <!-- Step 5 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-5.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-5.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Implementation
                         </h3>
-                        <img loading="lazy" src="assets/img/steps/implementation.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/implementation.svg" alt="Imagem ilustrativa" class="img-step"  width="225px" height="200px">
                         <p class="text-center">
                             Transition of the software developed to an operational version. Including the preparation of a production environment,
                             installation and configuration of software, testing, system integration and preparation for the end user.
@@ -634,9 +634,21 @@
                             </div>
 
                             <ul class="social-links">
-                                <li><a href="mailto:ctdunlimited@gmail.com?"><img loading="lazy" src="assets/img/icons/mail-icon.svg" alt="mail icon" height="25px"></a></li>
-                                <li><a href="skype:live:.cid.ec6326698f92b3e9?chat"><img loading="lazy" src="assets/img/icons/icon-skype.svg" alt="skype icon" height="25px"></a></li>
-                                <li><a href="https://discord.com/channels/@me/1095717653068394519"><img loading="lazy" src="assets/img/icons/icon-discord.svg" alt="discord icon" height="25px"></a></li>
+                                <li>
+                                    <a href="mailto:ctdunlimited@gmail.com?">
+                                        <img loading="lazy" src="assets/img/icons/mail-icon.svg" alt="mail icon" height="25px" width="25px">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="skype:live:.cid.ec6326698f92b3e9?chat">
+                                        <img loading="lazy" src="assets/img/icons/icon-skype.svg" alt="skype icon" height="25px" width="25px">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://discord.com/channels/@me/1095717653068394519">
+                                        <img loading="lazy" src="assets/img/icons/icon-discord.svg" alt="discord icon" height="25px" width="25px">
+                                    </a>
+                                </li>
                             </ul>
 
                         </div>
@@ -668,35 +680,35 @@
             <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
-    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <script>
+    <script defer src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script defer>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
     <!-- Latest jQuery -->
-    <script src="assets/js/jquery.min.js"></script>
+    <script defer src="assets/js/jquery.min.js"></script>
 
     <!-- Bootstrap js-->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script defer src="assets/js/bootstrap.min.js"></script>
 
     <!-- Owl Carousel js -->
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script defer src="assets/js/owl.carousel.min.js"></script>
 
     <!-- Mixitup js -->
-    <script src="assets/js/jquery.mixitup.js"></script>
+    <script defer src="assets/js/jquery.mixitup.js"></script>
 
     <!-- Magnific popup js -->
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script defer src="assets/js/jquery.magnific-popup.min.js"></script>
 
     <!-- Waypoint js -->
-    <script src="assets/js/jquery.waypoints.min.js"></script>
+    <script defer src="assets/js/jquery.waypoints.min.js"></script>
 
     <!-- Ajax Mailchimp js -->
-    <script src="assets/js/jquery.ajaxchimp.min.js"></script>
+    <script defer src="assets/js/jquery.ajaxchimp.min.js"></script>
 
 
     <!-- Main js-->
-    <script src="assets/js/main_script.js"></script>
+    <script defer src="assets/js/main_script.js"></script>
 </body>
 
 </html>
