--- a/pt-br-version.html
+++ b/pt-br-version.html
@@ -89,7 +89,7 @@
                                             <li>
                                                 <a href="./index.html" class="toggle-lang">
                                                     <img src="assets/img/us-flag.png" alt="Bandeira dos Estados Unidos"
-                                                        class="img-flag" height="25px" aria-label="Bandeira dos Estados Unidos">
+                                                        class="img-flag" height="25px" width="25px" aria-label="Bandeira dos Estados Unidos">
                                                     EN
                                                 </a>
                                             </li>
@@ -175,7 +175,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="feture-img">
-                                <img loading="lazy" src="assets/img/feature/mobile-device.svg" alt="Imagem ilustrativa">
+                                <img loading="lazy" src="assets/img/feature/mobile-device.svg" height="312px" width="293px" alt="Imagem ilustrativa">
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -276,25 +276,25 @@
                 <div class="row fun-fact-area">
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact tab-margin-bottom">
-                            <img loading="lazy" src="assets/img/services/icon-migrations.png" alt="Imagem ilustrativa">
+                            <img loading="lazy" width="64px" height="64px" src="assets/img/services/icon-migrations.png" alt="Imagem ilustrativa">
                             <p>Migração de <br>plataforma</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact tab-margin-bottom sm-no-border xs-no-border">
-                            <img loading="lazy" src="assets/img/services/icon-features.png" alt="Imagem ilustrativa">
+                            <img loading="lazy" width="64px" height="64px" src="assets/img/services/icon-features.png" alt="Imagem ilustrativa">
                             <p>Adicionar novos recursos ao seu software/aplicativo</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact">
-                            <img loading="lazy" src="assets/img/services/icon-database.png" alt="Imagem ilustrativa">
+                            <img loading="lazy" width="50px" height="50px" src="assets/img/services/icon-database.png" alt="Imagem ilustrativa">
                             <p>banco de dados <br>automatizado BKP</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact last">
-                            <img loading="lazy" src="assets/img/services/icon-firewall.png" alt="Imagem ilustrativa">
+                            <img loading="lazy" width="64px" height="64px" src="assets/img/services/icon-firewall.png" alt="Imagem ilustrativa">
                             <p>Serviços de firewall com parceria especializada</p>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <img loading="lazy" src="assets/img/choose/services.svg" alt="Imagem ilustrativa">
+                            <img loading="lazy" width="284px" height="206px" src="assets/img/choose/services.svg" alt="Imagem ilustrativa">
                         </div>
                         <div class="col-sm-8">
                             <div class="choose-box right">
@@ -341,7 +341,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4 col-sm-push-8">
-                            <img loading="lazy" src="assets/img/choose/tecnologies.svg" alt="Imagem ilustrativa">
+                            <img loading="lazy" width="283px" height="226px" src="assets/img/choose/tecnologies.svg" alt="Imagem ilustrativa">
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
                             <div class="choose-box left">
@@ -377,10 +377,10 @@
                     <!-- Step 1 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-1.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-1.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Primeiro Contato
                         </h3>
-                        <img loading="lazy" src="assets/img/steps/first-contact.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/first-contact.svg" width="206px" height="200px" alt="Imagem ilustrativa" class="img-step">
                         <p class="text-center">
                             O contato pode ser feito por e-mail, skype, discord ou preenchendo o formulário de orçamento em
                             nosso site. Em
@@ -389,16 +389,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px" width="40px">
                     </div>
 
                     <!-- Step 2 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-2.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-2.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Entendimento
                         </h3>
-                        <img  loading="lazy" src="assets/img/steps/understanding.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img  loading="lazy" width="300px" height="200px" src="assets/img/steps/understanding.svg" alt="Imagem ilustrativa" class="img-step">
                         <p class="text-center">
                             Esta etapa é onde elaboramos um orçamento com base nas informações prestadas, recomenda-se uma
                             reunião
@@ -408,16 +408,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px" width="40px">
                     </div>
 
                     <!-- Step 3 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-3.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-3.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Iniciando o Projeto
                         </h3>
-                        <img loading="lazy" src="assets/img/steps/start-the-project.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img loading="lazy" width="276px" height="200px" src="assets/img/steps/start-the-project.svg" alt="Imagem ilustrativa" class="img-step">
                         <p class="text-center">
                             Depois de definir o orçamento e passar por todo o planejamento do que será feito, um prazo
                             será passado para o
@@ -425,16 +425,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px" width="40px">
                     </div>
 
                     <!-- Step 4 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-4.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-4.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Finalização
                         </h3>
-                        <img loading="lazy" src="assets/img/steps/finalization.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/finalization.svg" alt="Imagem ilustrativa" class="img-step" height="200px" width="333px">
                         <p class="text-center">
                             Com o software ou projeto em mãos, realizamos os testes finais e instrução/adaptação dos
                             usuários com o software
@@ -443,16 +443,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px" width="40px">
                     </div>
 
                     <!-- Step 5 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img loading="lazy" src="assets/img/steps/step-5.svg" alt="Imagem ilustrativa" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-5.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Implementação
                         </h3>
-                        <img loading="lazy" src="assets/img/steps/implementation.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
+                        <img loading="lazy" width="225px" height="200px" src="assets/img/steps/implementation.svg" alt="Imagem ilustrativa" class="img-step" >
                         <p class="text-center">
                             Transição do software desenvolvido para uma versão operacional. Incluindo a preparação de um
                             ambiente de produção,
@@ -659,16 +659,16 @@
                             <ul class="social-links">
                                 <li>
                                     <a href="mailto:ctdunlimited@gmail.com?">
-                                        <img loading="lazy" src="assets/img/icons/mail-icon.svg" alt="mail icon" height="25px">
+                                        <img loading="lazy" src="assets/img/icons/mail-icon.svg" alt="mail icon" height="25px" width="25px">
                                     </a>
                                 </li>
                                 <li><a href="skype:live:.cid.ec6326698f92b3e9?chat">
-                                        <img loading="lazy" src="assets/img/icons/icon-skype.svg" alt="skype icon" height="25px">
+                                        <img loading="lazy" src="assets/img/icons/icon-skype.svg" alt="skype icon" height="25px" width="25px">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://discord.com/channels/@me/1095717653068394519">
-                                        <img loading="lazy" src="assets/img/icons/icon-discord.svg" alt="discord icon" height="25px">
+                                        <img loading="lazy" src="assets/img/icons/icon-discord.svg" alt="discord icon" height="25px" width="25px">
                                     </a>
                                 </li>
                             </ul>
@@ -697,8 +697,8 @@
             <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
-    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <script>
+    <script defer src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script defer>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
