--- a/index.html
+++ b/index.html
@@ -526,10 +526,10 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!-- accordion starts -->
-                        <div class="accordion panel-group" id="accordion" role="tablist">
+                        <div class="accordion panel-group" id="accordion">
 
                             <div class="panel clearfix">
-                                <div class="panel-heading" role="tab">
+                                <div class="panel-heading">
                                     <a href="#accordion01" data-toggle="collapse" data-parent="#accordion"
                                         aria-expanded="true" class="">
                                         <i class="fa fa-minus"></i>
@@ -538,7 +538,7 @@
                                             for my company?</h3>
                                     </a>
                                 </div>
-                                <div id="accordion01" class="panel-collapse collapse in" role="tabpanel"
+                                <div id="accordion01" class="panel-collapse collapse in"
                                     aria-expanded="true">
                                     <div class="panel-body">
                                         <p
@@ -564,7 +564,7 @@
                             </div>
 
                             <div class="panel clearfix">
-                                <div class="panel-heading" role="tab">
+                                <div class="panel-heading">
                                     <a href="#accordion02" class="collapsed" data-toggle="collapse"
                                         data-parent="#accordion" aria-expanded="false">
                                         <i class="fa fa-minus"></i>
@@ -573,7 +573,7 @@
                                         </h3>
                                     </a>
                                 </div>
-                                <div id="accordion02" class="panel-collapse collapse" role="tabpanel"
+                                <div id="accordion02" class="panel-collapse collapse"
                                     aria-expanded="false" style="height: 0px;">
                                     <div class="panel-body">
                                         <p
@@ -588,14 +588,14 @@
                             </div>
 
                             <div class="panel clearfix" aria-labelledby="accordion03-heading">
-                                <div class="panel-heading" role="tab" id="accordion03-heading">
+                                <div class="panel-heading" id="accordion03-heading">
                                     <a href="#accordion03" class="collapsed" data-toggle="collapse"
                                         data-parent="#accordion" aria-expanded="false" aria-controls="accordion03">
                                         <i class="fa fa-minus"></i>
                                         <h3 class="panel-title">How much does the investment cost?</h3>
                                     </a>
                                 </div>
-                                <div id="accordion03" class="panel-collapse collapse" role="tabpanel"
+                                <div id="accordion03" class="panel-collapse collapse" 
                                     aria-labelledby="accordion03-heading">
                                     <div class="panel-body">
                                         Since each software project is unique, we price each project based on its
@@ -606,15 +606,15 @@
                                 </div>
                             </div>
 
-                            <div class="panel clearfix" role="region" aria-labelledby="accordion04-heading">
-                                <div class="panel-heading" role="tab" id="accordion04-heading">
+                            <div class="panel clearfix" aria-labelledby="accordion04-heading">
+                                <div class="panel-heading"  id="accordion04-heading">
                                     <a href="#accordion04" class="collapsed" data-toggle="collapse"
                                         data-parent="#accordion" aria-expanded="false" aria-controls="accordion04">
                                         <i class="fa fa-minus"></i>
                                         <h3 class="panel-title">What technologies are used?</h3>
                                     </a>
                                 </div>
-                                <div id="accordion04" class="panel-collapse collapse" role="tabpanel"
+                                <div id="accordion04" class="panel-collapse collapse" 
                                     aria-labelledby="accordion04-heading">
                                     <div class="panel-body">
                                         We have experience with several front-end and back-end technologies, including
