--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                                     aria-labelledby="bnt1" role="region"
                                     >
                                     <div class="panel-body">
-                                        <p
+                                        <p class="panel-body-text"
                                             aria-label="Description of the role of an IT consultant in optimizing a company's IT systems and infrastructure.">
                                             An IT consultant is a professional who provides expert advice to companies
                                             on how to optimize their
@@ -580,7 +580,7 @@
                                     aria-expanded="false"
                                     aria-labelledby="bnt2" role="region" style="height: 0px;">
                                     <div class="panel-body">
-                                        <p
+                                        <p class="panel-body-text"
                                             aria-label="Description of how the delivery time of a software solution can vary based on project type, scope, and resource availability.">
                                             Our Software solutions can take from days to months to deliver, it's going
                                             to depend heavily on the type
@@ -604,7 +604,7 @@
                                     aria-labelledby="bnt3" role="region"
                                     >
                                     <div class="panel-body">
-                                        <p>
+                                        <p class="panel-body-text">
                                             Since each software project is unique, we price each project based on its
                                             complexity, scope, and delivery
                                             date requirements. Please contact us for a personalized assessment of your
@@ -626,13 +626,15 @@
                                    aria-expanded="false"
                                     aria-labelledby="bnt4" role="region">
                                     <div class="panel-body">
-                                        We have experience with several front-end and back-end technologies, including
-                                        but not limited to .NET,
-                                        Xamarin, TypeScript, Python, SQLServer, MySQL, Oracle, Angular and React. Our
-                                        team of experts is always
-                                        learning and expanding their knowledge to stay up-to-date with the latest
-                                        technologies and trends in the
-                                        industry.
+                                        <p class="panel-body-text">
+                                            We have experience with several front-end and back-end technologies, including
+                                            but not limited to .NET,
+                                            Xamarin, TypeScript, Python, SQLServer, MySQL, Oracle, Angular and React. Our
+                                            team of experts is always
+                                            learning and expanding their knowledge to stay up-to-date with the latest
+                                            technologies and trends in the
+                                            industry.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
